 6. Move 'Remote Libraries' into 'Apps'.
 7. Hide iframe (e.g. Settings pages) until loaded.
 8. Add custom icon for LMS 9's 'Recently Updated Albums' view.
 9. Add ability to hide 'Extras' items via preference file.
10. Add icons to 'Disks and Folders' listing.
11. Ignore 'itemNoAction' items in BMF and 'Disks and Folders'.
12. Add ability to hide players via preference file.

5.0.4
-----
1. Move 'CD Player' into 'Apps' and use JSONRPC API for this.
2. Open http/https weblinks in new window.
3. Refresh player status after start/stop 'Random Mix'.
4. Try to fix buttons, etc, in 'Extras' items opening new windows.
5. Fix custom combobox being unset for plugin settings pages.
6. Restrict settings pages to 1600px wide.
7. Fix missing text in YouTube comboboxes.
8. Use custom combobox in 'Extras' pages.

5.0.3
-----
1. Remove any previously saved 'CD Player' entry from homescreen.
2. Don't show year in brackets after album name in MAI track view, as year is
   shown separately.

5.0.2
-----
 1. When listing an artist's works show composer as subtitle if this is
    different to artist name.
 2. When showing player menu for 'Player settings' or 'Extra player settings'
    indicate current player name as per main toolbar player menu.
 3. Scroll to top when switch player via player menu in 'Player settings'.
 4. Allow to switch player when displaying an 'Extras' item.
 5. Add lower resolution icon for browser tabs, etc. Thanks to Peter Oliver.
 6. When showing artist works, if more than 1 composer then split into groups.
 7. Fix custom scrollbar in 'Help' pages.
 8. Remove option of 'CD Player' as a top-level item. This is in 'Extras' and
    can be pinned if required.
 9. When listing works under a genre filter by that genre.
10. Don't show 'Search within list' for advanced search results.
11. Attempt to have more consistent toolbar icon positions.
12. Fix hiding 'Alarm' and 'DSTM' settings in player extra settings.
13. Fix 'Audiobooks' entry in 'My Music'.